# rawstudio

./: .gitignore  .travis.yml  Makefile.am  NEWS  autogen.sh  configure.in
librawstudio/: Makefile.am  color.h  conf_interface.h  rawstudio.h  rawstudio.pc.in  rs-color-transform.c  rs-dcp-factory.c  rs-dcp-factory.h  rs-dcp-file.c  rs-dcp-file.h  rs-filetypes.c  rs-filetypes.h  rs-filter-param.c  rs-filter-param.h  rs-filter.c  rs-filter.h  rs-image16.c  rs-image16.h  rs-io-job-prefetch.c  rs-io.c  rs-lens-db-editor.c  rs-lens-db-editor.h  rs-lens-db.c  rs-lens-db.h  rs-lens.c  rs-lens.h  rs-macros.h  rs-math.c  rs-metadata.c  rs-metadata.h  rs-plugin-manager.c  rs-plugin-manager.h  rs-plugin.h  rs-profile-factory-model.h  rs-profile-factory.c  rs-profile-factory.h  rs-profile-selector.c  rs-profile-selector.h  rs-rawfile.c  rs-settings.c  (+7 more)
pixmaps/: Makefile.am
plugins/: Makefile.am
plugins/colorspace-adobergb/: Makefile.am
plugins/colorspace-transform/: Makefile.am  colorspace_transform.c  colorspace_transform_sse2.c  rs-cmm.c  rs-cmm.h
plugins/dcp/: Makefile.am  dcp-sse.c  dcp-sse2.c  dcp-sse4.c  dcp.c  dcp.h
plugins/dcrawloader/: Makefile.am
plugins/denoise/: denoise.c
plugins/gtk-view/: gtk-view.c
plugins/input-file/: input-file.c
plugins/input-image16/: input-image16.c
plugins/lensfun/: Makefile.am  lensfun-sse2.c  lensfun.c  rs-lensfun-select.c  rs-lensfun-select.h
plugins/load-dcraw/: Makefile.am
plugins/load-gdk/: load-gdk.c
plugins/load-png/: load-png.c
plugins/meta-ciff/: Makefile.am  ciff-meta.c
plugins/meta-mrw/: Makefile.am
plugins/meta-raf/: Makefile.am
plugins/meta-tiff/: Makefile.am  tiff-meta.c
plugins/meta-x3f/: Makefile.am
plugins/output-flickr/: Makefile.am
plugins/output-jpegfile/: output-jpegfile.c
plugins/resample/: Makefile.am  resample.c
plugins/transform/: transform.c
po/: POTFILES.in
profiles/: Makefile.am  rawstudio-cameras.xml
src/: Makefile.am  adobe-coeff.c  adobe-coeff.h  application.c  application.h  arch-generic.c  arch-x86.c  ciff-meta.c  ciff-meta.h  color.h  conf_interface.c  conf_interface.h  drawingarea.c  filename.c  gtk-helper.c  gtk-helper.h  gtk-interface.c  gtk-interface.h  gtk-progress.c  gtk-save-dialog.c  mrw-meta.c  mrw-meta.h  raf-meta.c  raf-meta.h  rawfile.c  rawfile.h  rawstudio.c  rawstudio.h  rs-actions.c  rs-batch.c  rs-batch.h  rs-cache.c  rs-cache.h  rs-camera-db.c  rs-cms.c  rs-color-transform.c  rs-color-transform.h  rs-curve.c  rs-curve.h  rs-enfuse.c  (+38 more)
